Fix navigation menu spacing for desktop browsers

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -292,7 +292,7 @@ a:hover {
   .nav-item {
     font-size: 18px;
     letter-spacing: 0.2vw;
-    margin-left: 2vw;
+    margin-left: 1.5vw;
   }
 
   .nav-link:hover {
